[package]
name = "iridium"
version = "0.1.0"
authors = ["Pietrino Atzeni <pietrino.atzeni@moneyfarm.com>"]
edition = "2018"

[dependencies]
nom = "^4.0"
clap = { version = "2.32", features = ["yaml"] }
log = "0.4"
env_logger = "0.5.13"
byteorder = "1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
